# yamori-rs

./: .gitignore  Cargo.toml  README.adoc  Settings.toml  build.rs
protos/: yamori.proto
src/: main.rs  rpc.rs  settings.rs  util.rs
