[package]
name = "yamori"
version = "0.1.0"
authors = ["ikubaku <hide4d51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1"
prost = "0.6"
tower = "0.3"
tokio = { version = "0.2", features = [ "macros", "uds", "fs", "stream" ] }
futures = { version = "0.3", default-features = false, features = [ "alloc" ] }
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_derive = "1.0.104"
serde_json = "1.0"
config = "0.10"
lazy_static = "1.4.0"
glob = "0.2"

[build-dependencies]
tonic-build = "0.1"
